Fixed footer on history page
It's still broken on news.html

--- a/Written Code/Styles/essential.css
+++ b/Written Code/Styles/essential.css
@@ -509,6 +509,7 @@
 =====================*/
 
 .footer {
+  clear:both;
   background-color: #93040B;
   height: 12em;
 }
